--- a/css/style.css
+++ b/css/style.css
@@ -520,8 +520,9 @@ h2.color{
 	text-align: center;
 }
 
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
 	.left{
 		padding-top: 60px;
 		
